--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost/adopet
+spring.datasource.url=jdbc:mysql://localhost/adopet?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=masterkey
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
 server.error.include-stacktrace=never
