--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,11 @@ spring.datasource.url=jdbc:mysql://localhost/adopet?createDatabaseIfNotExist=tru
 spring.datasource.username=root
 spring.datasource.password=masterkey
 
-spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.error.include-stacktrace=never
+spring.jpa.open-in-view=false
 
-api.jwt.issuer=adopet
-api.jwt.secret=${API_JWT_SECRET:1234567890}
+api.jwt.secret=1234567890
+api.jwt.ExpirationMs=86400000
